@@ -1,8 +1,10 @@
 ---
 - id_tag: 1
   tag: good
+  incompatible_tag: bad
 - id_tag: 2
   tag: bad
+  incompatible_tag: good
 - id_tag: 3
   tag: requires_illumina_attention
 - id_tag: 4
@@ -33,8 +35,10 @@
   tag: rta
 - id_tag: 17
   tag: paired_read
+  incompatible_tag: single_read
 - id_tag: 18
   tag: single_read
+  incompatible_tag: paired_read
 - id_tag: 19
   tag: staging
 - id_tag: 20
@@ -43,5 +47,13 @@
   tag: copying_problem
 - id_tag: 22
   tag: fc_slotA
+  incompatible_tag: fc_slotB
 - id_tag: 23
   tag: fc_slotB
+  incompatible_tag: fc_slotA
+- id_tag: 24
+  tag: workflow_NovaSeqStandard
+  incompatible_tag: workflow_NovaSeqXp
+- id_tag: 25
+  tag: workflow_NovaSeqXp
+  incompatible_tag: workflow_NovaSeqStandard
