@@ -1,5 +1,14 @@
 LIST OF CHANGES
 
+  - tracking database:
+     add column `incompatible_tag` to the tag table;
+     populate `incompatible_tag` column with values previously
+       hardcoded in a DBIx class;
+     add tags for instrument workflow;
+     simplify code in DBIx classes for setting and unsetting tags;
+     drop requirement for a valid user id when unsetting a tag;
+     drop a check for tag existence when unsetting a tag
+
 release 87.4
  - changes to support geno_refset repository
  - moved method for creating full file names from npg_tracking::product
@@ -26,8 +35,6 @@ release 87.4
      add a unique db constraint for all types of status descriptions;
      make temporal_index column in run_status_dict table non-nullable and
      add a unique constraint on it;
- - tracking database: 
-     add a unique db constraint for all types of status descriptions;
      simplify DBIx binding for statuses;
      add a method for temporal comparison of run statuses
 
